<resources>
    <string name="app_name">Delex Driver</string>
    <string name="facebook_app_id">2027731287449992</string>
    <string name="login_in">Logging in</string>
    <string name="choose_id_proof_img">Please upload Identity Proof</string>
    <string name="portal">Portal</string>
    <string name="vat">VAT</string>
    <string name="start_trip">TRIP START</string>
    <string name="unloading">UNLOADING</string>
    <string name="network_alert_title">Network Settings</string>
    <string name="network_alert_message">Network is slow or Network service is not enabled. Do you want to go to settings menu?</string>
    <string name="location_alert_title">Location Settings</string>
    <string name="location_alert_message">Location service is not enabled. Do you want to go to settings menu?</string>
    <string name="title_activity_confirm_number">ConfirmNumber</string>
    <string name="force_logout_msg">You are logout from the device, please login again.</string>
    <string name="addAmountToAdd">Please add amount to add to wallet.</string>
    <string name="cardDetailsNotFound">Please add card to recharge wallet</string>
    <string name="softLimitMsg">Reaching maximum limit of Credit Line</string>
    <string name="hardLimitMsg">Maximum limit of Credit Line exceeded</string>
    <string name="no_transactions_done">No transactions done</string>
    <string name="addcard">Add card</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="scancard">Scan card</string>
    <string name="poweredby">Powered by</string>
    <string name="skip">Skip</string>
    <string name="You_did_not_enter_valid_card">You did not enter a valid card</string>
    <string name="try_again">Try Again&#8230;.</string>
    <string name="card_ending_with">Card Ending With</string>
    <string name="stars">***************************************************************************************************************</string>
    <string name="expiry">EXP</string>
    <string name="carddflttxt">Make this card default</string>
    <string name="delete_card">Delete Card</string>
    <string name="wait">Please Wait&#8230;.</string>
    <string name="card_info">CARD INFO</string>
    <string name="Card_Info">Card Details</string>
    <string name="card_removed">Card Removed Successfully</string>
    <string name="confirmPayment">Confirm Payment</string>
    <string name="paymentMsg1">Click on CONFIRM to authorize</string>
    <string name="paymentMsg2">to re-charge your wallet with</string>
    <string name="transactionID">Trans. ID &#58;</string>
    <string name="bookingID">Booking ID &#58;</string>
    <string name="all">ALl</string>
    <string name="debit">DEBIT</string>
    <string name="credit">CREDIT</string>
    <string name="handlingFee">Handling</string>
    <string name="requested_For">Requested for</string>
    <string name="creditLine">Credit Line</string>
    <string name="Cancellation_fare">Cancellation Fare</string>
    <string name="wallet_enabled">Wallet enabled.</string>
    <string name="wallet_disabled">Wallet disabled.</string>
    <string name="positive_wallet_alert">You owe</string>
    <string name="negative_wallet_alert">owes you</string>
    <string name="bankdetails">Bank Details</string>
    <string name="something_went_wrong">Oops !Something went wrong !</string>
    <string name="alert_cap">ALERT!</string>
    <string name="messagealert">Message</string>
    <string name="payments">Wallet</string>
    <string name="id_proof">Identity Proof</string>
    <string name="prof_vech_model">Vehicle Model</string>
    <string name="prof_vech_make">Vehicle Make</string>
    <string name="paymentdetails">Payment Method</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading..&#8230;</string>
    <string name="logging_out">Logging out&#8230;</string>
    <string name="network_problem">No Internet Connection Available</string>
    <string name="uhOh">Uh&#45;Oh&#33;</string>
    <string name="reGrantPermissionMsg">You have denied the required permission(s). Please, grant to proceed further.\"</string>
    <string name="appSetting">App Setting</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logoutDialog">Do you want to logout?</string>
    <string name="log">Log</string>
    <string name="out">Out</string>
    <string name="sessionExpired">Sorry your session expired please login again!!!</string>
    <string name="login">LOG IN</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="app_name_splash">Truckr</string>
    <string name="splash_msg">Your same-day delivery solution</string>
    <string name="welcome">Welcome to Truckr</string>
    <string name="phone_no">PHONE NUMBER</string>
    <string name="phone_no_email_hint">EMAIL/PHONE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_pass">FORGOT PASSWORD?</string>
    <string name="select_country">SELECT COUNTRY</string>
    <string name="fill_fields">Fill the fields</string>
    <string name="phone_miss">Enter the email or phone number</string>
    <string name="phone_mis">Enter the phone number.</string>
    <string name="password_miss">Enter the password</string>
    <string name="login_succes">Login Success</string>
    <string name="login_signup_txt"><![CDATA[<font color=\'#767676\'>\"Don\'t have an account?\"</font><font color=\'#e40d00\'>\" Signup\"</font>]]></string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="forgotMsgMob">Enter your Phone Number to receive a \n Verification Code to reset password</string>
    <string name="forgotMsgEmail">Enter your Email Address to receive a \n Link to reset password</string>
    <string name="verify_mob">Verify Mobile Number</string>
    <string name="verify_msg1">A Verification Code has been sent to</string>
    <string name="verify_msg2">Please enter the code below.</string>
    <string name="resend">RESEND CODE ?</string>
    <string name="verify">VERIFY</string>
    <string name="enter_otp">Enter a verication code</string>
    <string name="newpassmsg">Mobile number verified \n  Reset new password</string>
    <string name="NewPass">NEW PASSWORD</string>
    <string name="ReEnterPass">\"RE-ENTER PASSWORD</string>
    <string name="passNotMactch">Password is not matching</string>
    <string name="Continue">CONTINUE</string>
    <string name="entNewPass">Enter new password</string>
    <string name="EntNewPass">Change Password</string>
    <string name="reentrPass">Re-enter the password</string>
    <string name="logout_vl">Logout</string>
    <string name="selectVeh_vl">Select Vechicle</string>
    <string name="plateno_vl">Plate Number</string>
    <string name="type_vl">Type</string>
    <string name="model_vl">Model</string>
    <string name="confirm">CONFIRM</string>
    <string name="logoutmessage">Are you sure you want to log out?</string>
    <string name="selectVechicle">Select vechicle</string>
    <string name="signup_">Sign Up</string>
    <string name="next">NEXT</string>
    <string name="persoanl">Personal Details</string>
    <string name="fname">First Name*</string>
    <string name="lname">Last Name</string>
    <string name="phone_num">Phone Number*</string>
    <string name="email">Email*</string>
    <string name="password_signup">Password*</string>
    <string name="driving_lic">DRIVING LICENCE *</string>
    <string name="upload">\"(upload both sides)*</string>
    <string name="err_fname">Please enter First Name</string>
    <string name="err_phone_no">Please enter Phone Number</string>
    <string name="err_email">Please enter Email Address</string>
    <string name="err_pass">Please enter Password</string>
    <string name="invalidEmail">Please enter a valid Email Address</string>
    <string name="invalid_email_or_phone">Invalid Email or Phone Number</string>
    <string name="invalidPhone">Please enter a valid Phone Number</string>
    <string name="operator">Operator</string>
    <string name="free_lancer">Freelancer</string>
    <string name="choose_prof_pic">Please add a Profile Image</string>
    <string name="choose_licence_img">Please upload Driving Licence</string>
    <string name="phone_reg_err">Phone  is already registered.</string>
    <string name="phone_email_reg_err">Phone and Email is already registered.</string>
    <string name="email_reg_err">Email  is already registered.</string>
    <string name="licence_miss">Upload the Licence image.</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="plate_no">Plate Number*</string>
    <string name="color">Color*</string>
    <string name="type">Type*</string>
    <string name="specialities">Goods Type*</string>
    <string name="make">Make*</string>
    <string name="model">Model*</string>
    <string name="insurance">INSURANCE (upload both sides)*</string>
    <string name="finish">FINISH</string>
    <string name="err_plate">Enter plate number</string>
    <string name="err_color">Enter color</string>
    <string name="err_type">Select Type</string>
    <string name="err_specialities">Select Goods Type</string>
    <string name="err_make">Select Make</string>
    <string name="err_model">Select Model</string>
    <string name="err_veh_img">Select vehicle image</string>
    <string name="err_insurance_img">Add insurance image</string>
    <string name="signup_success_msg">Thanks for signing up. one of our representative will get in touch with you in the next 24 hours to setup your profile and get all the necessary documents</string>
    <string name="Insurance_miss">Upload the Insurance image.</string>
    <string name="certificate_miss">Upload the Certificate image.</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="view_profile">View Profile</string>
    <string name="go_offline">Go Offline</string>
    <string name="go_online">Go Online</string>
    <string name="current">CURRENT</string>
    <string name="upcoming">UPCOMING</string>
    <string name="id">ID :</string>
    <string name="time_left">Time left for pickup</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="no_of_trips">No of Trips</string>
    <string name="amount_earns">Amount Earned</string>
    <string name="onthepickup">On the way to pickup</string>
    <string name="googlemaps">Google Maps</string>
    <string name="googlemaps_color"><![CDATA[<font color=\'#4885ED\'>G</font><font color=\'#DB3236\'>o</font><font color=\'#F4C20D\'>o</font><font color=\'#4885ED\'>g</font><font color=\'#3CBA54\'>l</font><font color=\'#DB3236\'>e</font><font color=\'#767676\'>\" Maps\"</font>]]></string>
    <string name="save">Save</string>
    <string name="invite">Invite</string>
    <string name="bank_details">Bank Details</string>
    <string name="DOB">Date of Birth(mm/dd/yyyy)*</string>
    <string name="state">State*</string>
    <string name="city">City*</string>
    <string name="address">Address*</string>
    <string name="zipCode">Zip Code*</string>
    <string name="photoID">PHOTO ID*</string>
    <string name="FIRSTNAME">First Name*</string>
    <string name="LASTNAME">Last Name*</string>
    <string name="SSN">SSN*</string>
    <string name="addPhotoHeader">Add Photo</string>
    <string name="takePhoto">Take Photo</string>
    <string name="cho0seFromGallery">Choose From Gallery</string>
    <string name="countyM">Country*</string>
    <string name="addStripeAcount">Add Stripe Account</string>
    <string name="live_chat">Live chat</string>
</resources>