<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:id="@+id/rate_header"
    android:background="@color/white"
    android:paddingTop="20dp"
    android:layout_marginBottom="1dp"
    android:text="@string/addPhotoHeader"
    android:textColor="@color/black"
    android:textSize="17sp"/>
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:layout_marginBottom="1dp"
        android:text="@string/addPhotoHeader"
        android:textColor="@color/black"
        android:textSize="17sp"
         />


    <Button
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/takePhoto"
        android:textAllCaps="false"
        android:textColor="@color/blue_toast"
        android:layout_marginBottom="1dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/cho0seFromGallery"
        android:layout_marginBottom="1dp"
        android:textAllCaps="false"
        android:textColor="@color/blue_toast"
        android:textSize="16sp" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="16sp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/blue_toast" />

</LinearLayout>